<resources>
    <string name="app_name">CalC</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="mul">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="equals">=</string>
    <string name="pow">^</string>
    <string name="back">⌫</string>
    <string name="dec">.</string>
    <string name="clear">C</string>
    <string name="perc">%</string>
    <string name="AC">AC</string>
    <string name="error">Error</string>
    <string name="sqrt">√</string>
</resources>